# otus-cpp-basic-IlyaJa

./: README.md
HomeWork2/: CMakeLists.txt  hello_world.cpp  main.cpp  move_me_out.cpp  move_me_out.h
HomeWork3/: CMakeLists.txt  Calculator.cpp  check_value.cpp  check_value.h  high_scores.cpp  high_scores.txt  random_value.cpp
